Added switches, tweaked render code, misc updates.

--- a/src/main/resources/assets/zssaddon/lang/en_US.lang
+++ b/src/main/resources/assets/zssaddon/lang/en_US.lang
@@ -203,7 +203,9 @@ chat.zss.fierce.swordget=Dark powers erupt in this sword...
 chat.zss.grandma.gear.get=Ohh... Darling, you have a sword! Why don't you take this gear!
 chat.zss.grandma.gear.cheat=Hey, sweetheart..! I already gave you a tunic, and a shield!
 chat.zss.grandma.gear.cheat.shield=Hey, sweetheart..! I already gave you a shield!
-chat.zss.grandma.soup=Here! Have some soup!
+chat.zss.grandma.soup=Here, sweetie! Have some soup!
+chat.zss.grandma.soup.nospace=Ohhh, sweetie. You don't have enough space for more soup!
+chat.zss.grandma.soup.cheat=I already gave you a bottle, my sweet child!
 chat.zss.guard.trade.1.2=Ahahaha! Shabby sword, lad! Here take this new and shiny one!
 chat.zss.guard.trade.2.2=Ahahaha! Seems like you're not worthy to wield a soldiers sword!
 chat.zss.guard.trade.1.1=Nice sword, bud! But hey, take this instead!
